Ass3/initial/src/main/bkit/parser/.antlr/BKITParser.py
# Generated from c:\Users\Hydrogen\Downloads\BK-eL\HK201\AssQUIZ201\PPL\Ass3\initial\src\main\bkit\parser\BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'='", "'-'", "'+'", "'*'", "'\\'", "'%'", "'-.'", 
                     "'+.'", "'*.'", "'\\.'", "'!'", "'&&'", "'||'", "'=='", 
                     "'!='", "'<'", "'>'", "'<='", "'>='", "'=/='", "'<.'", 
                     "'>.'", "'<=.'", "'>=.'", "'('", "')'", "'['", "']'", 
                     "':'", "'.'", "','", "';'", "'{'", "'}'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'Body'", "'Break'", "'Continue'", "'Do'", 
                     "'Else'", "'ElseIf'", "'EndBody'", "'EndIf'", "'EndFor'", 
                     "'EndWhile'", "'For'", "'Function'", "'If'", "'Parameter'", 
                     "'Return'", "'Then'", "'Var'", "'While'", "'True'", 
                     "'False'", "'EndDo'" ]

    symbolicNames = [ "<INVALID>", "WS", "COMMENT", "ID", "ASSIGN", "I_SUB", 
                      "I_ADD", "I_MUL", "I_DIV", "I_REM", "F_SUB", "F_ADD", 
                      "F_MUL", "F_DIV", "NOT", "AND", "OR", "EQUAL", "I_NOTEQUAL", 
                      "I_LESSTHAN", "I_GREATERTHAN", "I_LTOE", "I_GTOE", 
                      "F_NOTEQUAL", "F_LESSTHAN", "F_GREATERTHAN", "F_LTOE", 
                      "F_GTOE", "LP", "RP", "LSB", "RSB", "COLON", "DOT", 
                      "COMMA", "SEMI", "LB", "RB", "INT", "DEC", "Hexa", 
                      "Octal", "FLOAT", "BOOLEAN", "BODY", "BREAK", "CONTINUE", 
                      "DO", "ELSE", "ELSEIF", "ENDBODY", "ENDIF", "ENDFOR", 
                      "ENDWHILE", "FOR", "FUNCTION", "IF", "PARAMETER", 
                      "RETURN", "THEN", "VAR", "WHILE", "TRUE", "FALSE", 
                      "ENDDO", "STRING", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "UNTERMINATED_COMMENT", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_varDeclare = 1
    RULE_decl = 2
    RULE_parameter = 3
    RULE_idlist = 4
    RULE_arraytype = 5
    RULE_function = 6
    RULE_body = 7
    RULE_state_list1 = 8
    RULE_state_list2 = 9
    RULE_assign_state = 10
    RULE_if_state = 11
    RULE_iff = 12
    RULE_elseif = 13
    RULE_els = 14
    RULE_for_state = 15
    RULE_while_state = 16
    RULE_do_while_state = 17
    RULE_break_state = 18
    RULE_continue_state = 19
    RULE_return_state = 20
    RULE_exp = 21
    RULE_operand = 22
    RULE_func_call = 23
    RULE_func_state = 24
    RULE_arrDeclare = 25
    RULE_index = 26
    RULE_arr = 27
    RULE_lit = 28
    RULE_literal = 29
    RULE_add = 30
    RULE_sub = 31
    RULE_mul = 32
    RULE_div = 33
    RULE_rela_operator = 34

    ruleNames =  [ "program", "varDeclare", "decl", "parameter", "idlist", 
                   "arraytype", "function", "body", "state_list1", "state_list2", 
                   "assign_state", "if_state", "iff", "elseif", "els", "for_state", 
                   "while_state", "do_while_state", "break_state", "continue_state", 
                   "return_state", "exp", "operand", "func_call", "func_state", 
                   "arrDeclare", "index", "arr", "lit", "literal", "add", 
                   "sub", "mul", "div", "rela_operator" ]

    EOF = Token.EOF
    WS=1
    COMMENT=2
    ID=3
    ASSIGN=4
    I_SUB=5
    I_ADD=6
    I_MUL=7
    I_DIV=8
    I_REM=9
    F_SUB=10
    F_ADD=11
    F_MUL=12
    F_DIV=13
    NOT=14
    AND=15
    OR=16
    EQUAL=17
    I_NOTEQUAL=18
    I_LESSTHAN=19
    I_GREATERTHAN=20
    I_LTOE=21
    I_GTOE=22
    F_NOTEQUAL=23
    F_LESSTHAN=24
    F_GREATERTHAN=25
    F_LTOE=26
    F_GTOE=27
    LP=28
    RP=29
    LSB=30
    RSB=31
    COLON=32
    DOT=33
    COMMA=34
    SEMI=35
    LB=36
    RB=37
    INT=38
    DEC=39
    Hexa=40
    Octal=41
    FLOAT=42
    BOOLEAN=43
    BODY=44
    BREAK=45
    CONTINUE=46
    DO=47
    ELSE=48
    ELSEIF=49
    ENDBODY=50
    ENDIF=51
    ENDFOR=52
    ENDWHILE=53
    FOR=54
    FUNCTION=55
    IF=56
    PARAMETER=57
    RETURN=58
    THEN=59
    VAR=60
    WHILE=61
    TRUE=62
    FALSE=63
    ENDDO=64
    STRING=65
    UNCLOSE_STRING=66
    ILLEGAL_ESCAPE=67
    UNTERMINATED_COMMENT=68
    ERROR_CHAR=69

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def varDeclare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.VarDeclareContext)
            else:
                return self.getTypedRuleContext(BKITParser.VarDeclareContext,i)


        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.FunctionContext)
            else:
                return self.getTypedRuleContext(BKITParser.FunctionContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_program




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.FUNCTION or _la==BKITParser.VAR:
                self.state = 72
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [BKITParser.VAR]:
                    self.state = 70
                    self.varDeclare()
                    pass
                elif token in [BKITParser.FUNCTION]:
                    self.state = 71
                    self.function()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 77
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.DeclContext)
            else:
                return self.getTypedRuleContext(BKITParser.DeclContext,i)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_varDeclare




    def varDeclare(self):

        localctx = BKITParser.VarDeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_varDeclare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(BKITParser.VAR)
            self.state = 80
            self.match(BKITParser.COLON)
            self.state = 81
            self.decl()
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 82
                self.match(BKITParser.COMMA)
                self.state = 83
                self.decl()
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 89
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def literal(self):
            return self.getTypedRuleContext(BKITParser.LiteralContext,0)


        def arrDeclare(self):
            return self.getTypedRuleContext(BKITParser.ArrDeclareContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_decl




    def decl(self):

        localctx = BKITParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.match(BKITParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.match(BKITParser.ID)
                self.state = 93
                self.match(BKITParser.ASSIGN)
                self.state = 94
                self.literal()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 95
                self.arrDeclare()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 96
                self.arrDeclare()
                self.state = 97
                self.match(BKITParser.ASSIGN)
                self.state = 98
                self.literal()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARAMETER(self):
            return self.getToken(BKITParser.PARAMETER, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.DeclContext)
            else:
                return self.getTypedRuleContext(BKITParser.DeclContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_parameter




    def parameter(self):

        localctx = BKITParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_parameter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(BKITParser.PARAMETER)
            self.state = 103
            self.match(BKITParser.COLON)

            self.state = 104
            self.decl()
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 105
                self.match(BKITParser.COMMA)
                self.state = 106
                self.decl()
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.ID)
            else:
                return self.getToken(BKITParser.ID, i)

        def arraytype(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.ArraytypeContext)
            else:
                return self.getTypedRuleContext(BKITParser.ArraytypeContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_idlist




    def idlist(self):

        localctx = BKITParser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_idlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 112
                self.match(BKITParser.ID)
                pass

            elif la_ == 2:
                self.state = 113
                self.arraytype()
                pass


            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 116
                self.match(BKITParser.COMMA)
                self.state = 119
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 117
                    self.match(BKITParser.ID)
                    pass

                elif la_ == 2:
                    self.state = 118
                    self.arraytype()
                    pass


                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraytypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.LSB)
            else:
                return self.getToken(BKITParser.LSB, i)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.ExpContext)
            else:
                return self.getTypedRuleContext(BKITParser.ExpContext,i)


        def RSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.RSB)
            else:
                return self.getToken(BKITParser.RSB, i)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def func_call(self):
            return self.getTypedRuleContext(BKITParser.Func_callContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_arraytype




    def arraytype(self):

        localctx = BKITParser.ArraytypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_arraytype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 126
                self.match(BKITParser.ID)
                pass

            elif la_ == 2:
                self.state = 127
                self.func_call()
                pass


            self.state = 130
            self.match(BKITParser.LSB)
            self.state = 131
            self.exp(0)
            self.state = 132
            self.match(BKITParser.RSB)
            self.state = 139
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 133
                    self.match(BKITParser.LSB)
                    self.state = 134
                    self.exp(0)
                    self.state = 135
                    self.match(BKITParser.RSB) 
                self.state = 141
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(BKITParser.FUNCTION, 0)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COLON)
            else:
                return self.getToken(BKITParser.COLON, i)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def body(self):
            return self.getTypedRuleContext(BKITParser.BodyContext,0)


        def PARAMETER(self):
            return self.getToken(BKITParser.PARAMETER, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.DeclContext)
            else:
                return self.getTypedRuleContext(BKITParser.DeclContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_function




    def function(self):

        localctx = BKITParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(BKITParser.FUNCTION)
            self.state = 143
            self.match(BKITParser.COLON)
            self.state = 144
            self.match(BKITParser.ID)
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.PARAMETER:
                self.state = 145
                self.match(BKITParser.PARAMETER)
                self.state = 146
                self.match(BKITParser.COLON)
                self.state = 147
                self.decl()
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==BKITParser.COMMA:
                    self.state = 148
                    self.match(BKITParser.COMMA)
                    self.state = 149
                    self.decl()
                    self.state = 154
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 157
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def state_list2(self):
            return self.getTypedRuleContext(BKITParser.State_list2Context,0)


        def ENDBODY(self):
            return self.getToken(BKITParser.ENDBODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_body




    def body(self):

        localctx = BKITParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(BKITParser.BODY)
            self.state = 160
            self.match(BKITParser.COLON)
            self.state = 161
            self.state_list2()
            self.state = 162
            self.match(BKITParser.ENDBODY)
            self.state = 163
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class State_list1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign_state(self):
            return self.getTypedRuleContext(BKITParser.Assign_stateContext,0)


        def if_state(self):
            return self.getTypedRuleContext(BKITParser.If_stateContext,0)


        def for_state(self):
            return self.getTypedRuleContext(BKITParser.For_stateContext,0)


        def while_state(self):
            return self.getTypedRuleContext(BKITParser.While_stateContext,0)


        def do_while_state(self):
            return self.getTypedRuleContext(BKITParser.Do_while_stateContext,0)


        def break_state(self):
            return self.getTypedRuleContext(BKITParser.Break_stateContext,0)


        def continue_state(self):
            return self.getTypedRuleContext(BKITParser.Continue_stateContext,0)


        def return_state(self):
            return self.getTypedRuleContext(BKITParser.Return_stateContext,0)


        def func_state(self):
            return self.getTypedRuleContext(BKITParser.Func_stateContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_state_list1




    def state_list1(self):

        localctx = BKITParser.State_list1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_state_list1)
        try:
            self.state = 174
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 165
                self.assign_state()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 166
                self.if_state()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 167
                self.for_state()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 168
                self.while_state()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 169
                self.do_while_state()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 170
                self.break_state()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 171
                self.continue_state()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 172
                self.return_state()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 173
                self.func_state()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class State_list2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDeclare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.VarDeclareContext)
            else:
                return self.getTypedRuleContext(BKITParser.VarDeclareContext,i)


        def state_list1(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.State_list1Context)
            else:
                return self.getTypedRuleContext(BKITParser.State_list1Context,i)


        def getRuleIndex(self):
            return BKITParser.RULE_state_list2




    def state_list2(self):

        localctx = BKITParser.State_list2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_state_list2)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 176
                self.varDeclare()
                self.state = 181
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 185
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 182
                    self.state_list1() 
                self.state = 187
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_stateContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def exp(self):
            return self.getTypedRuleContext(BKITParser.ExpContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def arraytype(self):
            return self.getTypedRuleContext(BKITParser.ArraytypeContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_assign_state




    def assign_state(self):

        localctx = BKITParser.Assign_stateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_assign_state)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 190
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.state = 188
                self.match(BKITParser.ID)
                pass

            elif la_ == 2:
                self.state = 189
                self.arraytype()
                pass


            self.state = 192
            self.match(BKITParser.ASSIGN)
            self.state = 193
            self.exp(0)
            self.state = 194
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_stateContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def iff(self):
            return self.getTypedRuleContext(BKITParser.IffContext,0)


        def ENDIF(self):
            return self.getToken(BKITParser.ENDIF, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def els(self):
            return self.getTypedRuleContext(BKITParser.ElsContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_if_state




    def if_state(self):

        localctx = BKITParser.If_stateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_if_state)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 196
            self.iff()
            self.state = 198
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.ELSE:
                self.state = 197
                self.els()


            self.state = 200
            self.match(BKITParser.ENDIF)
            self.state = 201
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IffContext(ParserRuleContext):
